<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_products"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_payments"
        android:icon="@drawable/ic_payments"
        android:title="@string/title_payments"
        />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_support"
        android:icon="@drawable/ic_support"
        android:title="@string/title_support" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_group_9"
        android:title="@string/more" />

<!--    <item-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="dash" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
<!--        android:title="notifications" />-->

</menu>