<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/partner_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:id="@+id/partner_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/partner_view_background"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/partner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.03"
                android:text="@string/partner_name"
                android:textColor="@color/textColor2"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/shopping_bag_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/partner_name"
                android:paddingLeft="16dp"
                android:src="@drawable/ic_shopping_bag" />

            <TextView
                android:id="@+id/percent_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/partner_name"
                android:text="@string/percent_text_view"
                android:textColor="@color/textColor2"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/shop_items_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/percent_text_view"
                android:paddingTop="16dp"
                android:text="@string/shop_items"
                android:textColor="#888888"
                android:textSize="10sp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>